# ja_sentence_segmenter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  ja_sentence_segmenter.html  pyproject.toml  search.js  setup.cfg  tox.ini
.github/workflows/: gh-pages.yml  release.yml  test.yml
docs/superpowers/plans/: 2026-07-10-modernize-tooling.md
docs/superpowers/specs/: 2026-07-10-modernize-tooling-design.md
ja_sentence_segmenter/: __init__.py  common.html  concatenate.html  normalize.html  split.html
ja_sentence_segmenter/common/: pipeline.html  pipeline.py
ja_sentence_segmenter/concatenate/: __init__.py  simple_concatenator.html  simple_concatenator.py
ja_sentence_segmenter/normalize/: neologd_normalizer.html  neologd_normalizer.py
ja_sentence_segmenter/split/: simple_splitter.html  simple_splitter.py
tests/common/: test_pipeline.py
tests/concatenate/: test_simple_concatenator.py
tests/normalize/: test_neologd_normalizer.py
tests/split/: test_simple_splitter.py
theme/: syntax-highlighting.css  theme.css
