[tool.poetry]
name = "ja_sentence_segmenter"
version = "0.0.2"
description = "sentence segmenter for japanese text"
authors = ["wwwcojp"]
homepage = "https://github.com/wwwcojp"
repository = "https://github.com/wwwcojp/ja_sentence_segmenter"
license = "MIT"
readme = "README.md"
packages = [
    { include = "ja_sentence_segmenter" },
]
include = [
  "ja_sentence_segmenter/py.typed"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
]

[tool.poetry.dependencies]
python = ">=3.6 <4.0"

[tool.poetry.dev-dependencies]
black = {version = ">=19.10b0", allow-prereleases = true}
flake8 = "^3.7"
flake8-builtins = "^1.4"
flake8-docstrings = "^1.5"
flake8-isort = "^2.8"
isort = "^4.3"
mypy = "^0.750.0"
pip-licenses = "^1.16"
pytest = "^5.3"
pytest-cov = "^2.8"
tox = "^3.14"

[tool.black]
line-length = 160
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

