[project]
name = "ja_sentence_segmenter"
version = "0.1.0"
description = "sentence segmenter for japanese text"
authors = [{ name = "wwwcojp" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
]
dependencies = []

[project.urls]
Homepage = "https://wwwcojp.github.io/ja_sentence_segmenter/ja_sentence_segmenter.html"
Repository = "https://github.com/wwwcojp/ja_sentence_segmenter"

[dependency-groups]
test = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]
dev = [
    { include-group = "test" },
    "bandit>=1.8",
    "mypy>=1.15",
    "pdoc>=15.0",
    "poethepoet>=0.30",
    "ruff>=0.13",
    "tox>=4.21",
    "tox-uv>=1.25",
]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

# フラットレイアウト(src/ なし)のため module-root を空にする
[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["A", "B", "C4", "C90", "D", "E", "F", "I", "N", "RUF", "SIM", "UP", "W"]
# 日本語テキストを扱うライブラリのため、全角文字を「紛らわしい文字」として
# 検出する RUF001/002/003 は無効化する
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
files = ["ja_sentence_segmenter/**/*.py"]
strict = true
warn_unreachable = true
disallow_any_unimported = true
pretty = true
show_column_numbers = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test_"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --cov-report xml:cov.xml --cov ja_sentence_segmenter -vv"

[tool.coverage.run]
branch = true
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
skip_covered = false

[tool.tox]
requires = ["tox>=4.21", "tox-uv>=1.25"]
env_list = ["py39", "py310", "py311", "py312", "py313", "py314"]

[tool.tox.env_run_base]
description = "run unit tests"
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
commands = [["pytest"]]

[tool.poe.tasks]
lint = { shell = "ruff check . && ruff format --check .", help = "lint and check formatting with ruff" }
fmt = { shell = "ruff format . && ruff check --fix .", help = "format code and autofix lint issues" }
typecheck = { cmd = "mypy", help = "type check with mypy" }
test = { cmd = "pytest", help = "run tests with pytest" }
bandit = { cmd = "bandit -r ja_sentence_segmenter/", help = "analyze code using bandit" }
pdoc = { cmd = "pdoc -d numpy -o docs -t theme/ ja_sentence_segmenter/", help = "generate api documents using pdoc" }
